--- a/GoMoto/PostsFeedVC/PostCell/PostCell.xib
+++ b/GoMoto/PostsFeedVC/PostCell/PostCell.xib
@@ -50,7 +50,7 @@
                         <color key="sectionIndexBackgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="0.47137200342465752" colorSpace="custom" customColorSpace="sRGB"/>
                     </tableView>
                     <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="252" verticalCompressionResistancePriority="749" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xYF-Y2-oS9">
-                        <rect key="frame" x="218" y="196" width="87" height="28"/>
+                        <rect key="frame" x="54.5" y="196" width="250.5" height="28"/>
                         <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="13"/>
                         <state key="normal" title="Comments [0]">
                             <color key="titleColor" red="0.7378324866" green="0.76449722050000002" blue="0.77647632359999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -94,31 +94,29 @@
                             <constraint firstAttribute="height" constant="40" id="bDS-eA-kPy"/>
                         </constraints>
                     </view>
-                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O6O-kT-6W1">
-                        <rect key="frame" x="15" y="195" width="195" height="30"/>
-                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="13"/>
-                        <state key="normal" title="Likes [3]">
-                            <color key="titleColor" red="0.7378324866" green="0.76449722050000002" blue="0.77647632359999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                        </state>
-                    </button>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Likes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1os-so-Ubk">
+                        <rect key="frame" x="15" y="196" width="31.5" height="20.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <color key="textColor" red="0.73783248662948608" green="0.76449722051620483" blue="0.77647632360458374" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
                     <constraint firstItem="krD-9T-4AC" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="0g9-xK-YcL"/>
-                    <constraint firstItem="krD-9T-4AC" firstAttribute="top" secondItem="O6O-kT-6W1" secondAttribute="bottom" constant="12" id="3Qn-N0-hNL"/>
-                    <constraint firstItem="O6O-kT-6W1" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="4Cc-Zt-fgG"/>
                     <constraint firstItem="qCX-sO-Bkk" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="8K6-3G-he5"/>
                     <constraint firstAttribute="bottom" secondItem="krD-9T-4AC" secondAttribute="bottom" constant="8" id="986-eb-9du"/>
                     <constraint firstAttribute="trailing" secondItem="krD-9T-4AC" secondAttribute="trailing" constant="16" id="ExD-Fh-8un"/>
+                    <constraint firstItem="krD-9T-4AC" firstAttribute="top" secondItem="1os-so-Ubk" secondAttribute="bottom" constant="20.5" id="MeD-Ml-iIw"/>
                     <constraint firstItem="T7L-Gm-eRF" firstAttribute="top" secondItem="rfi-HW-3xa" secondAttribute="bottom" constant="8" id="NzQ-hS-ZC5"/>
                     <constraint firstAttribute="trailing" secondItem="TYI-dT-w6A" secondAttribute="trailing" constant="15" id="QgC-TO-UYA"/>
                     <constraint firstItem="T7L-Gm-eRF" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="S6r-as-Nqn"/>
                     <constraint firstItem="krD-9T-4AC" firstAttribute="top" secondItem="xYF-Y2-oS9" secondAttribute="bottom" constant="13" id="Voo-KH-pZa"/>
                     <constraint firstAttribute="trailing" secondItem="xYF-Y2-oS9" secondAttribute="trailing" constant="15" id="WMG-8z-QVy"/>
                     <constraint firstAttribute="trailing" secondItem="rfi-HW-3xa" secondAttribute="trailing" id="YR6-EU-YEb"/>
-                    <constraint firstItem="xYF-Y2-oS9" firstAttribute="leading" secondItem="O6O-kT-6W1" secondAttribute="trailing" constant="8" id="YaP-9b-FWg"/>
                     <constraint firstAttribute="trailing" secondItem="4oy-Cc-arI" secondAttribute="trailing" id="aM1-ZC-Tq6"/>
+                    <constraint firstItem="1os-so-Ubk" firstAttribute="top" secondItem="c6F-1w-JvZ" secondAttribute="bottom" constant="13" id="aP5-74-Vsk"/>
                     <constraint firstAttribute="trailing" secondItem="qCX-sO-Bkk" secondAttribute="trailing" constant="15" id="azb-qw-9Fb"/>
-                    <constraint firstItem="O6O-kT-6W1" firstAttribute="top" secondItem="c6F-1w-JvZ" secondAttribute="bottom" constant="12" id="hTX-wk-K6z"/>
+                    <constraint firstItem="xYF-Y2-oS9" firstAttribute="leading" secondItem="1os-so-Ubk" secondAttribute="trailing" constant="8" id="eqW-Ns-e31"/>
                     <constraint firstAttribute="trailing" secondItem="T7L-Gm-eRF" secondAttribute="trailing" constant="15" id="iQx-qg-taI"/>
                     <constraint firstItem="qCX-sO-Bkk" firstAttribute="top" secondItem="T7L-Gm-eRF" secondAttribute="bottom" constant="8" id="j6a-vD-dvm"/>
                     <constraint firstItem="4oy-Cc-arI" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="mgQ-mS-Rtf"/>
@@ -126,6 +124,7 @@
                     <constraint firstItem="4oy-Cc-arI" firstAttribute="top" secondItem="qCX-sO-Bkk" secondAttribute="bottom" constant="8" id="p6k-0M-xC1"/>
                     <constraint firstItem="xYF-Y2-oS9" firstAttribute="top" secondItem="4oy-Cc-arI" secondAttribute="bottom" constant="8" id="sts-Ld-p4O"/>
                     <constraint firstItem="TYI-dT-w6A" firstAttribute="top" secondItem="rfi-HW-3xa" secondAttribute="bottom" constant="8" id="ufO-4k-6B2"/>
+                    <constraint firstItem="1os-so-Ubk" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="w9t-gC-NOC"/>
                     <constraint firstItem="rfi-HW-3xa" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="zFI-gy-7RY"/>
                 </constraints>
             </tableViewCellContentView>
@@ -135,6 +134,8 @@
                 <outlet property="commentsTableView" destination="krD-9T-4AC" id="KwN-3d-8Fd"/>
                 <outlet property="contentLabel" destination="qCX-sO-Bkk" id="NH7-eI-P7X"/>
                 <outlet property="dateTimeLabel" destination="TYI-dT-w6A" id="IDH-iV-61T"/>
+                <outlet property="likeButton" destination="c6F-1w-JvZ" id="OBN-Pu-cz2"/>
+                <outlet property="likesCountLabel" destination="1os-so-Ubk" id="xpR-3T-tRb"/>
                 <outlet property="trackIcon" destination="rfi-HW-3xa" id="RgD-jl-BhT"/>
                 <outlet property="trackNameLabel" destination="T7L-Gm-eRF" id="nbW-dJ-Ewy"/>
             </connections>
