--- a/GoMoto/MyTracksVC/MyTracksListCell/MyTracksListCell.xib
+++ b/GoMoto/MyTracksVC/MyTracksListCell/MyTracksListCell.xib
@@ -1,21 +1,76 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="AvenirNext.ttc">
+            <string>AvenirNext-Bold</string>
+            <string>AvenirNext-UltraLight</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="MyTracksListCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="172" id="KGk-i7-Jjw" customClass="MyTracksListCell" customModule="GoMoto" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="172"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="171.5"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8gc-Wa-3al">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="171.5"/>
+                    </imageView>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aKV-ML-DUx">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="25"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3LI-MU-uii">
+                                <rect key="frame" x="137.5" y="1" width="45" height="23.5"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="17"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nci-OO-fmU">
+                                <rect key="frame" x="278" y="3.5" width="34" height="19.5"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-UltraLight" family="Avenir Next" pointSize="14"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.40000000000000002" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="25" id="6K4-eX-nlL"/>
+                            <constraint firstItem="3LI-MU-uii" firstAttribute="centerX" secondItem="aKV-ML-DUx" secondAttribute="centerX" id="N44-mg-AxZ"/>
+                            <constraint firstItem="3LI-MU-uii" firstAttribute="centerY" secondItem="aKV-ML-DUx" secondAttribute="centerY" id="Nuz-Lo-VPL"/>
+                            <constraint firstItem="Nci-OO-fmU" firstAttribute="centerY" secondItem="3LI-MU-uii" secondAttribute="centerY" id="ckQ-3G-i5a"/>
+                            <constraint firstAttribute="trailing" secondItem="Nci-OO-fmU" secondAttribute="trailing" constant="8" id="fXo-qj-KEZ"/>
+                        </constraints>
+                    </view>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="8gc-Wa-3al" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Efp-Ws-Spx"/>
+                    <constraint firstItem="aKV-ML-DUx" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="NOo-nF-dBh"/>
+                    <constraint firstItem="8gc-Wa-3al" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="OB2-Tc-Y4X"/>
+                    <constraint firstItem="aKV-ML-DUx" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="jMh-W1-SDR"/>
+                    <constraint firstAttribute="trailing" secondItem="aKV-ML-DUx" secondAttribute="trailing" id="lic-KQ-wXG"/>
+                    <constraint firstAttribute="bottom" secondItem="8gc-Wa-3al" secondAttribute="bottom" id="pkb-Xv-Rhq"/>
+                    <constraint firstAttribute="trailing" secondItem="8gc-Wa-3al" secondAttribute="trailing" id="vVc-1b-fee"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="distanceLabel" destination="Nci-OO-fmU" id="qyU-Dy-CGD"/>
+                <outlet property="trackImageView" destination="8gc-Wa-3al" id="64j-j5-qDX"/>
+                <outlet property="trackNameLabel" destination="3LI-MU-uii" id="3w9-HO-dYN"/>
+            </connections>
+            <point key="canvasLocation" x="25" y="116"/>
         </tableViewCell>
     </objects>
 </document>
