--- a/GoMoto/MyTracksVC/SearchTracksVC/SearchTracksCell/SearchTracksCell.xib
+++ b/GoMoto/MyTracksVC/SearchTracksVC/SearchTracksCell/SearchTracksCell.xib
@@ -18,7 +18,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="131" id="KGk-i7-Jjw" customClass="SearchTracksCell" customModule="GoMoto" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="131" id="KGk-i7-Jjw" customClass="SearchTracksCell" customModule="GoMoto" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="131"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -43,13 +43,26 @@
                                 <color key="textColor" red="0.98496952068885868" green="1" blue="0.98244120077748631" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wrr-d2-EgR">
+                                <rect key="frame" x="8" y="2.5" width="20" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="20" id="ggO-Gm-dvx"/>
+                                    <constraint firstAttribute="height" constant="20" id="ypl-YA-g9l"/>
+                                </constraints>
+                                <state key="normal" image="FavoriteTrackIconEmpty"/>
+                                <connections>
+                                    <action selector="setFavorite:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="Lxn-vx-FtS"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.40000000000000002" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="CNw-Xo-ULK" firstAttribute="centerY" secondItem="kcN-7T-ccq" secondAttribute="centerY" id="0oN-qz-hJT"/>
+                            <constraint firstItem="wrr-d2-EgR" firstAttribute="leading" secondItem="Eez-Rz-iwU" secondAttribute="leading" constant="8" id="5yh-5Z-E8U"/>
                             <constraint firstAttribute="trailing" secondItem="CNw-Xo-ULK" secondAttribute="trailing" constant="8" id="PGb-ID-mIN"/>
                             <constraint firstAttribute="height" constant="25" id="Xog-ns-H6Q"/>
                             <constraint firstItem="kcN-7T-ccq" firstAttribute="centerY" secondItem="Eez-Rz-iwU" secondAttribute="centerY" id="tmm-SQ-5uj"/>
+                            <constraint firstItem="wrr-d2-EgR" firstAttribute="centerY" secondItem="Eez-Rz-iwU" secondAttribute="centerY" id="unv-yc-br0"/>
                             <constraint firstItem="kcN-7T-ccq" firstAttribute="centerX" secondItem="Eez-Rz-iwU" secondAttribute="centerX" id="xrQ-Qx-saG"/>
                         </constraints>
                     </view>
@@ -67,10 +80,14 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="distanceLabel" destination="CNw-Xo-ULK" id="M19-C6-Q4h"/>
+                <outlet property="favoriteButtonOutlet" destination="wrr-d2-EgR" id="9pR-uq-yqa"/>
                 <outlet property="trackImageView" destination="Bjs-Ql-e0a" id="ECC-k2-939"/>
                 <outlet property="trackNameLabel" destination="kcN-7T-ccq" id="1vH-Aw-msr"/>
             </connections>
             <point key="canvasLocation" x="25" y="95.5"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="FavoriteTrackIconEmpty" width="1170" height="1119"/>
+    </resources>
 </document>
